--- a/ch4_2.qmd
+++ b/ch4_2.qmd
@@ -4,14 +4,15 @@
 \newcommand{\1}{\mathbf{1}}
 \newcommand{\PP}{\mathbb{P}}
 \newcommand{\E}{\mathbb{E}}
+\newcommand{\bp}{\mathbf{p}}
 
 
-Les tests du $\chi_2$ sont une vaste famille de tests assez variés qui visent, pour la plupart, à tester si un échantillon (souvent discret) a été généré par une loi précise ; on parle souvent de test d'ajustement. 
+Les tests du $\chi_2$ sont une vaste famille de tests qui visent, pour la plupart, à tester si un échantillon (souvent discret) a été généré par une loi précise ; on parle parfois de test d'ajustement. 
 
-Soit $\Omega$ un ensemble fini à $k$ éléments, disons pour simplifier $\{1, \dotsc, k\}$. On notera $S_k$ l'ensemble des lois de probabilités sur cet ensemble, c'est-à-dire les $k$-uplets $\mathbf{p} = (p_1, \dotsc, p_k)$ de nombres positifs dont la somme vaut 1. On observe $n$ tirages indépendants et identiquement distribués selon une même loi sur $\Omega$. Formellement, le modèle statistique est donné par $(\mathbf{p}^{\otimes n} : \mathbf{p} \in S_k)$. 
 
 ## Loi multinomiale
 
+Soit $\Omega$ un ensemble fini à $k$ éléments, disons pour simplifier $\{1, \dotsc, k\}$. On notera $S_k$ l'ensemble des lois de probabilités sur cet ensemble, c'est-à-dire les $k$-uplets $\mathbf{p} = (p_1, \dotsc, p_k)$ de nombres positifs dont la somme vaut 1. On observe $n$ tirages indépendants et identiquement distribués selon une même loi sur $\Omega$. Formellement, le modèle statistique est donné par $(\mathbf{p}^{\otimes n} : \mathbf{p} \in S_k)$. 
 
 
 
@@ -30,7 +31,9 @@ $$ \Sigma = \mathrm{diag}(\mathbf{p}) - \mathbf{p}\mathbf{p}^\top.$${#eq-covarmu
 
 :::{.proof}
 
-On commence par remarquer que $N = \sum_{i=1}^n Z_i$, où $Z_i=(\1_{X_i=1}, \dotsc, \1_{X_i=k})$, les $Z_i$ étant i.i.d., de vecteur moyenne $\mathbf{p}$, et de matrice de covariance @eq-covarmultin. Comme $\E[|Z_1|^2]=1$, il suffit d'appliquer le TCL. 
+On commence par remarquer que $N = \sum_{i=1}^n Z_i$, où $Z_i=(\1_{X_i=1}, \dotsc, \1_{X_i=k})$. Les $Z_i$ sont iid de moyenne $\mathbf{p}$. Les covariances des entrées $i$ et $j$ de $Z_k$ sont données par 
+$$\mathbb{E}[\mathbf{1}_{X_k=i}\mathbf{1}_{X_k=j}] - p_i p_j = \delta_{i,j}p_i - p_i p_j,$$
+ce qui montre que la matrice de covariance des $Z_k$ est @eq-covarmultin. Comme $\E[|Z_1|^2]=1$, il suffit d'appliquer le TCL. 
 
 :::
 
@@ -44,8 +47,18 @@ $$H_1:\mathbf{p} \neq \mathbf{p}_0,$${#eq-chi2alt}
 pour une valeur de $\mathbf{p}_0$ fixée au préalable. 
 
 
-Sous $H_0$, le théorème précédent dit que $\sqrt{n}(\frac{N}{n}- \mathbf{p}_0) \approx N(0, \Sigma_0)$ dès que $n \mathbf{p}_0 \geq (5,\dotsc, 5)$. Il reste à trouver une quantité pivotale. Pour cela, il suffit de remarquer que, sous $H_0$,  $\mathrm{diag}(1/\sqrt{\mathbf{p}_0}) \sqrt{n}(\frac{N}{n}- \mathbf{p}_0)$ converge en loi vers  ${N}(0, I_k - \sqrt{\mathbf{p}_0} \sqrt{\mathbf{p}_0}^T)$
-(en supposant tout de même que pour tout $p_{j,0} > 0$ pour chaque $j$). En manipulant légèrement cette expression, on obtient sa forme usuelle. 
+:::{#exm-testadeq}
+
+On peut se demander si, dans la langue courante, les 21 lettres de l'alphabet ont à peu près la même probabilité d'apparaître comme première lettre d'un mot. Cela revient à tester si $\bp_0=(1/26, \dotsc, 1/26)$, hypothèse qui est évidemment fausse. 
+
+Qu'en est-il des 9 chiffres ? On peut vouloir tester si, dans n'importe quel document (journal, site internet, article scientifique), ces 9 chiffres apparaissent à peu près uniformément en tant que premier chiffre d'un nombre. Cela reviendrait à tester $\bp_0 = (1/9, \dotsc, 1/9)$. 
+
+Ce n'est pas le cas et cette hypothèse est très fréquemment réfutée : le premier chiffre significatif d'un nombre est bien plus souvent 1 ($\approx 30\%$ des cas) que $9$ ($\approx 5\%$ cas). Ce phénomène s'appelle [*loi de Benford*](https://fr.wikipedia.org/wiki/Loi_de_Benford). 
+
+:::
+
+Le théorème précédent dit que $\sqrt{n}(\frac{N}{n}- \mathbf{p}) \approx N(0, \Sigma)$. Ainsi, sous $H_0$,  $\mathrm{diag}(1/\sqrt{\mathbf{p}_0}) \sqrt{n}(\frac{N}{n}- \mathbf{p}_0)$ converge en loi vers  ${N}(0, I_k - \sqrt{\mathbf{p}_0} \sqrt{\mathbf{p}_0}^T)$
+(en supposant tout de même que pour tout $p_{j,0} > 0$ pour chaque $j$). En manipulant légèrement cette expression, on obtient la forme classique donnée dans la définition suivante. 
 
 
 :::{#def-contraste}
@@ -89,8 +102,13 @@ $$ H_0 : \mathbf{p}\in I_{k,h}$${#eq-chi2indepnul}
 contre l'hypothèse alternative 
 $$ H_1 : \mathbf{p} \notin I_{k,h}.$$
 
+:::{#exm-test}
+
+On récolte des données sur le groupe socio-professionnel (GSP) et le genre. Chaque observation correspond à une personne, possédant deux attributs : $\mathtt{genre}$, valant 0 ou 1, et $\mathtt{GSP}$, valant l'une des 6 groupes définis par l'INSEE (Agriculteur, artisan, cadre, etc.). Le test ci-dessus vise à déterminer si les deux modalités sont indépendantes, c'est-à-dire si la proportion d'hommes et de femmes dans chaque groupe ne diffère pas significativement en fonction du groupe. 
+
+:::
+
 La procédure pour effectuer un tel test nécessite plusieurs étapes. 
-\newcommand{\bp}{\mathbf{p}}
 
 Si $\mathbf{p}$ était effectivement la loi de deux variables indépendantes $\bp^x$ et $\bp^y$, alors ses marginales seraient précisément $\bp^x$ et $\bp^y$, que l'on pourrait facilement estimer. Pour chaque $i$ et chaque $j$, les estimateurs $\hat{\bp}^x$ et $\hat{\bp}^y$ définis par
 $$\hat{p}^x_i = \frac{\sum_{j=1}^h N_{i,j}}{n}$$
