--- a/ch5_0.qmd
+++ b/ch5_0.qmd
@@ -1,17 +1,18 @@
 # Modèle linéaire
 
-
+Les modèles *linéaires* sont les modèles les plus simples dans lesquels on raisonne en termes d'*entrées* et de *sorties*. Dans ces modèles, on dispose de variables $x_i$, dites *explicatives*, et de variables $y_i$, dites *à expliquer*, et l'on suppose qu'il existe une fonction inconnue $f$ telle que 
+$$y_i \approx f(x_i),$$
+et que l'on voudrait estimer. Les modèles linéaires consistent à suppose que $f$ est affine. Les modèles plus complexes, commes les réseaux de neurones, placent $f$ dans des classes plus riches. 
 
 ## Ajustement affine en une dimension. 
 
-On dispose de variables $x_i$, dites *explicatives*, et de variables $y_i$, dites *à expliquer*. On suppose qu'il existe une relation, peut-être imparfaite, de la forme 
-$$ y_i \approx \alpha + \beta x_i$$
-où $\alpha, \beta$ sont deux nombres réels. Pour trouver les meilleurs $\alpha, \beta$ possibles, on calcule la distance entre le nuage de points $(x_i, y_i)$ et la droite d'équation $y = \alpha + \beta x$. Cette distance au carré est donnée par 
-$$ \sum_{i=1}^n (y_i - \alpha - \beta x_i)^2.$$
+ On suppose qu'il existe entre les données $x_i$ et $y_i$ une relation de la forme $ y_i \approx \alpha + \beta x_i$
+où $\alpha, \beta$ sont deux nombres réels. Ici, $\approx$ signifie que la relation n'est pas parfaite : peut-être par exemple que les sorties sont bien égales à $\alpha+\beta x_i$, mais que les observations $y_i$ ont été polluées par du bruit ou des erreurs. Nous verrons cela plus tard. 
 
-On cherchera donc à minimiser la fonction de deux variables 
-$$(\alpha, \beta) \mapsto \sum_{i=1}^n (y_i - \alpha - \beta x_i)^2.$$
-Appelons cette fonction $L$. C'est manifestement une fonction quadratique qui tend vers $+\infty$ lorsque $(\alpha, \beta) \to \infty$, par conséquent cette fonction possède un unique minimiseur $(\hat{\alpha}, \hat{\beta})$, et ce minimiseur est le seul point en lequel les dérivées partielles s'annulent (*conditions de premier ordre*) : $\partial_\alpha L(\hat{\alpha}, \hat{\beta}) = 0$ et $\partial_\beta L(\hat{\alpha}, \hat{\beta})=0$. Or, 
+Pour l'heure, nous voulons chercher les meilleurs $\alpha, \beta$ possibles. On calcule la distance entre le nuage de points $(x_i, y_i)$ et la droite d'équation $y = \alpha + \beta x$. Cette distance au carré est donnée par 
+$$ L(\alpha, \beta) = \sum_{i=1}^n (y_i - \alpha - \beta x_i)^2.$$
+
+On cherchera donc les $(\hat\alpha, \hat\beta)$ qui  minimisent cette distance. La fonction $L$ est manifestement une fonction quadratique qui tend vers $+\infty$ lorsque $(\alpha, \beta) \to \infty$, par conséquent cette fonction possède un unique minimiseur $(\hat{\alpha}, \hat{\beta})$, et ce minimiseur est le seul point en lequel les dérivées partielles s'annulent (*conditions de premier ordre*) : $\partial_\alpha L(\hat{\alpha}, \hat{\beta}) = 0$ et $\partial_\beta L(\hat{\alpha}, \hat{\beta})=0$. Or, 
 $$\partial_\alpha L(\alpha, \beta)  = \sum_{i=1}^n (\alpha + \beta x_i - y_i)$$
 $$ \partial_\beta L(\alpha, \beta) = \sum_{i=1}^n x_i(\alpha + \beta x_i - y_i).$$
 Les conditions de premier ordre deviennent donc $n\alpha + \beta (x_1 + \dotsc + x_n) - (y_1 + \dotsb + y_n) =0$ soit encore $\alpha + \beta \bar{x} - \bar{y}=0$, et d'autre part $\alpha (x_1 + \dotsb + x_n) + \beta(x_1^2 + \dotsb + x_n^2) - (x_1y_1 + \dotsb + x_ny_n) = 0$, soit $\alpha \bar{x}+ \beta \overline{xx} - \overline{xy} = 0$, où $\overline{xx}$ est la moyenne des carrés des $x_i$ et $\overline{xy}$ la moyenne des $x_iy_i$. En résolvant ces équations, on trouve d'abord $\alpha$ puis $\beta$ : 
@@ -30,9 +31,12 @@ $$ r^2 = \frac{\overline{xy}-\bar{x}\bar{x}}{\tilde{\sigma}_x \tilde{\sigma}_y}.
 \newcommand{\bx}{\boldsymbol{x}}
 \newcommand{\bt}{\boldsymbol{\theta}}
 \newcommand{\argmin}{\mathrm{argmin}~}
+
 Dans le cadre général, les variables explicatives ne sont pas de dimension 1 mais $d$. On notera $\bx = (x_1, \dotsc, x_d)$
-un élément de $\mathbb{R}^d$ ; les variables explicatives seront alors $\bx_1,\dotsc, \bx_n$. On cherchera des nombres $\theta_i$ tels que $y_i$ est aussi proche que possible de $$\theta_1 \bx_{i,1} + \dotsb + \theta_d \bx_{i,d} = \langle \bt, \bx\rangle = \bx_i \theta^\top $$
-On pose $X$ la matrice $n\times d$ dont la $i$-ème ligne est $\bx_i$. On cherche à trouver le $\bt$ qui minimise $|Y - X\theta|^2$, autrement dit
+un élément de $\mathbb{R}^d$ ; les variables explicatives seront alors $\bx_1,\dotsc, \bx_n$. On cherchera des nombres $\theta_i$ tels que $y_i$ est aussi proche que possible de $$\theta_1 \bx_{i,1} + \dotsb + \theta_d \bx_{i,d} = \langle \bt, \bx_i\rangle = \bt^\top \bx_i. $$
+On pourrait reproduire la méthode analytique ci-dessus pour trouver les paramètres optimaux. Cependant, une interprétation géométrique simplifie la tâche. 
+
+On pose $X$ la matrice $n\times d$ dont la $i$-ème ligne est $\bx_i$. La distance entre le nuage de points $(X,Y)$ et la droite d'équation $Y = X\theta$ est $|Y - X\theta|$. On cherchera donc à trouver le $\bt$ qui minimise $\theta \mapsto |Y - X\theta|^2$, autrement dit
 
 
 $$\hat{\bt} = \arg \min_{\theta} |Y - X\theta|^2. $$
@@ -51,33 +55,43 @@ La projection orthogonale sur le sous-espace vectoriel engendré par les colonne
 
 :::
 
-Le vecteur $\hat{\varepsilon} = Y - X\hat{\bt}$ est appelé *vecteur des résidus*. S'il est nul ou très petit, cela veut dire que les $Y$ sont presque parfaitement des fonctions linéaires des $X$. 
+Le vecteur $\hat{Y} = X\hat{\bt}$ est appelé *vecteur des prédictions*. Le vecteur $\hat{\varepsilon} = Y-\hat{Y} = Y - X\hat{\bt}$ est appelé *vecteur des résidus*. Si ce dernier est nul ou très petit, cela veut dire que les $Y$ sont presque parfaitement des fonctions linéaires des $X$. 
+
+L'expression @eq-mco possède de nombreuses expressions alternatives. Parmi elles, on pourra noter que 
+$$\hat{\bt} = \bt + \left(\frac{1}{n}\sum_{i=1}^n \bx_i\bx_i^\top\right)^{-1}\frac{1}{n}\sum_{i=1}^n \bx_i \varepsilon_i. $${#eq-mco-alt}
 
 
 
 ## Modèle gaussien
 
-À ce stade, nous n'avons fait aucune hypothèse statistique ni probabiliste sur le modèle : les $\bx_i, y_i$ étaient donnés tels quels. Dans le *modèle linéaire gaussien* avec variables explicatives $\bx_1, \dotsc, \bx_n$ exogènes consiste à supposer que $Y = X\bt + \varepsilon$, où $\varepsilon = N(0,\sigma^2 I_n)$. Formellement, le modèle est indexé par $\bt$ et $\sigma^2$, et donné par 
+À ce stade, nous n'avons fait aucune hypothèse statistique ni probabiliste sur le modèle : les $\bx_i, y_i$ étaient donnés tels quels. Le *modèle linéaire gaussien* avec variables explicatives $\bx_1, \dotsc, \bx_n$ exogènes consiste à supposer que $Y = X\bt + \varepsilon$, où $\varepsilon = N(0,\sigma^2 I_n)$. Formellement, le modèle est indexé par $\bt$ et $\sigma^2$, et donné par 
 $$P_{\bt, \sigma^2} = N(X\bt, \sigma^2 I_d).$$ 
-Dans ce modèle, la loi de l'estimateur @eq-mco est connue. 
+Dans ce modèle, la loi de l'estimateur @eq-mco est connue. Par simplicité, je note $H = X(X^\top X)^{-1}X^\top$ la matrice de projection orthogonale sur l'espace vectoriel engendré par les colonnes de $X$, qui est de dimension $d$.
 
 :::{#thm-glm}
 
 Sous le modèle linéaire gaussien $P_{\bt, \sigma^2}$, 
 $$\hat{\bt} \sim N(\bt, \sigma^2 (X^\top X)^{-1}), $$
-$$\hat{\varepsilon} \sim N(0,\sigma^2(I_n - H)), $$
-et ces deux variables aléatoires sont indépendantes. En particulier, $|\hat\varepsilon|^2 / \sigma^2  \sim \chi_2(d)$. 
+$$\frac{|\hat{\varepsilon}|^2}{\sigma^2} \sim \chi_2(n-d), $$
+et ces deux variables aléatoires sont indépendantes. 
 
 :::
 
 :::{.proof} 
 
-Ce n'est rien de plus que le théorème de Cochran appliqué à notre problème. 
+Ce n'est rien de plus que le théorème de Cochran appliqué à notre problème : en effet, le vecteur des résidus est la projection orthogonale de $Y$ sur le sous-espace orthogonal à l'espace des colonnes de $X$. 
 
 :::
 
+La variable aléatoire $|\hat\varepsilon|^2$ est souvent appelée *Somme des Carrés des Résidus* (SCR). Le théorème précédent implique que 
+$$\hat{\sigma}^2_n = \frac{|\hat\varepsilon|^2}{n-d}$$
+est un estimateur sans biais de $\sigma^2$. et ces deux variables aléatoires sont indépendantes. En particulier, $(n-d)\hat{\sigma}^2_n/\sigma^2 \sim \chi_2(n-d)$. 
+
+
 ## Modèle linéaire général
 
+Il est possible de ne pas faire d'hypothèses gaussiennes sur le modèle. Dans ce cadre plus général, on supposera que $Y = X\bt + \varepsilon$, où les $\varepsilon_i$ sont centrés, indépendants, et de même variance $\sigma^2$ --- sous cette dernière hypothèse, on parle de modèle *homoscédastique*. Sous ces hypothèses, $\hat{\bt}$ est toujours un estimateur sans biais de $\bt$ : cela se voit directement en prenant l'espérance de @eq-mco-alt. 
+  
 
 
 
