--- a/ref.qmd
+++ b/ref.qmd
@@ -4,5 +4,6 @@
 - [The earth is round (p<.05)](https://www.sjsu.edu/faculty/gerstman/misc/Cohen1994.pdf)
 - [Statistiques mathématiques en action](https://www.deboecksuperieur.com/ouvrage/9782311007206-statistique-mathematique-en-action), pour ceux qui vont passer l'agrégation. 
 - [Introduction à l'économétrie](https://www.eyrolles.com/Entreprise/Livre/introduction-a-l-econometrie-9782707613981/) de Brigitte Dormont est un excellent livre, écrit en français, sur les modèles linéaires. 
+- En anglais, la référence sur les modèles linéaires est [Econometric analysis](https://www.pearson.fr/book/?gcoi=27440100285130) de Greene. 
 - [Méthodes statistiques](https://www.eyrolles.com/Sciences/Livre/methodes-statistiques-9782717848595/) de Philippe Tassi est un bon livre général. 
 - [All of statistics](https://egrcc.github.io/docs/math/all-of-statistics.pdf) de Larry Wasserman est un ouvrage de référence. 
