--- a/ch4_1.qmd
+++ b/ch4_1.qmd
@@ -105,8 +105,34 @@ Tout ceci n'est rien d'autre que $\beta_\star-\beta - z(\alpha-\alpha_\star)$,
 où $\alpha, \beta$ désignent les deux types d'erreurs du test $T$ et $\alpha_\star, \beta_\star$ celles de $T_\star$. Mais nous avons supposé que $\alpha = \alpha_\star$ : des deux termes ci-dessus, ne reste que le premier, à savoir $\beta_\star - \beta$, qui est bien négatif comme demandé. 
 :::
 
+## Un exemple de test de rapport de vraisemblance
 
-## Bornes sur la variation totale
+Plaçons-nous dans un modèle de Bernoulli : on a des variables aléatoires $X_1, \dotsc, X_n$ iid de loi $\mathrm{Ber}(p)$, et l'on souhaite tester une valeur $p_0$ de $p$ contre une valeur $p_1 \neq p_0$ à partir d'une réalisation $x_1, \dotsc, x_n$ du modèle. 
+
+Ici, les lois sont discrètes : elles possèdent une densité par rapport à la mesure de comptage. La probabilité d'observer $x_1, \dotsc, x_n$ dans le modèle avec paramètre $p$ est égale à 
+$$\prod_{i=1}^n p^{x_i}(1-p)^{1-x_i} = p^s(1-p)^{n-s}$$
+où $s = x_1 + \dotsc + x_n$. Ainsi, le rapport des vraisemblances $r$ est égal à 
+$$\frac{p_1^s (1-p_1)^{n-s}}{p_0^s(1-p_0)^{n-s}} = \left(\frac{p_1(1-p_0)}{p_0(1-p_1)}\right)^s\left(\frac{1-p_1}{1-p_0}\right)^n. $$ 
+Le théorème de Neyman-Pearson dit qu'un test de la forme $r>z$ est plus puissant que tous les tests ayant le même niveau. Or, cette région de rejet peut encore s'écrire
+$$ s \ln \left(\frac{p_1(1-p_0)}{p_0(1-p_1)}\right) > \ln(z) - n\ln\left(\frac{1-p_1}{1-p_0}\right).$$
+
+**Dans le cas où $p_0<p_1$**, alors par croissance $p_1 / (1-p_1)$ est plus grand que $p_0/(1-p_0)$, et donc cette région de rejet peut encore s'écrire 
+$$ \frac{s}{n} > \frac{\ln(z)/n - \ln((1-p_1)/(1-p_0))}{\ln \left(\frac{p_1(1-p_0)}{p_0(1-p_1)}\right) }.$$
+Cette écriture n'a rien d'intéressant en soi. Tout ce qui compte, c'est que la région de rejet *optimale au sens de Neyman-Pearson* est de la forme $\{\bar{X}_n > z'\}$
+où $z'$ correspond au terme de droite ci-dessus. 
+
+
+**Dans le cas où $p_0>p_1$**, alors le même raisonnement donne une région de rejet de la forme $\{\bar{X}_n < z'\}$. 
+
+
+La détermination de $z'$ dépendra du niveau de confiance que l'on veut se donner. L'erreur de première espèce est $P_{p_0}(\bar{X}_n > z')$, qui est la probabilité qu'une binomiale $\mathrm{Bin}(n,p_0)$ soit plus grande que $nz'$. En choisissant pour $nz'$ le quantile de niveau $1-\alpha$ de cette loi, la probabilité ci-dessus est plus petite que $\alpha$ et le test est de niveau de confiance supérieur à $1-\alpha$.  
+
+
+
+
+## Une borne sur la variation totale
+
+*Ce chapitre n'a pas été vu en cours et n'est pas au programme.*
 
 La construction du test optimal au sens de l'affinité nécessite le calcul de la distance en variation totale, laquelle peut être notoirement difficile : 
 - d'abord, parce que la formule @eq-dtvformule peut être impossible à calculer même si $P$ et $Q$ sont connues ; 
