--- a/ch4_ex.qmd
+++ b/ch4_ex.qmd
@@ -139,6 +139,16 @@ L'argent fait-il le bonheur ?
 
 :::
 
+## Annales de partiel
+
+Je ne garantis pas que les notations et les concepts utilisés dans ces annales soient en phase avec le cours de cette année !
+
+- [Partiel 2020](/pdfs/CC1.pdf) et [sa correction](/pdfs/Corrige_CC1.pdf)
+
+- [Examen 2020](/pdfs/ExoExam.pdf) ; ne pas regarder le deuxième exercice. 
+
+- [Partiel 2023](/pdfs/Partiel2023.pdf) et [sa correction](/pdfs/Partiel2023Corrige.pdf)
+
 
 
 
